создал включение сервера и обработку заявки на регистрацию надо дополнить и упростить разбив на функции, а так же создать библиотеку BlockAPI

--- a/BlockServer/nbproject/project.properties
+++ b/BlockServer/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/BlockServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.BlockBibl.jar=/home/toha/NetBeansProjects/BlockBibl/dist/BlockBibl.jar
+file.reference.StanleySpace.jar=/home/toha/NetBeansProjects/StanleySpace/dist/StanleySpace.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.BlockBibl.jar}:\
+    ${file.reference.StanleySpace.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=block.server.BlockServer
+main.class=stan.block.server.BlockServer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
