--- a/BlockServer/nbproject/project.properties
+++ b/BlockServer/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.BlockBibl.jar=/home/toha/NetBeansProjects/BlockBibl/dist/BlockBibl.jar
 file.reference.StanleySpace.jar=/home/toha/NetBeansProjects/StanleySpace/dist/StanleySpace.jar
+file.reference.StanleySpace.jar-1=G:\\Google Drive\\Stanley_projects\\NETBEANS\\StanleySpace\\Stan\\StanleySpace\\dist\\StanleySpace.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.BlockBibl.jar}:\
-    ${file.reference.StanleySpace.jar}
+    ${file.reference.StanleySpace.jar}:\
+    ${file.reference.StanleySpace.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
