--- a/BlockServer/nbproject/project.properties
+++ b/BlockServer/nbproject/project.properties
@@ -27,7 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/BlockServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.BlockAPI.jar=/home/toha/NetBeansProjects/BlockAPI/BlockAPI/dist/BlockAPI.jar
 file.reference.BlockBibl.jar=/home/toha/NetBeansProjects/BlockBibl/dist/BlockBibl.jar
+file.reference.StanAPI.jar=/home/toha/NetBeansProjects/StanAPI/StanAPI/dist/StanAPI.jar
 file.reference.StanleySpace.jar=/home/toha/NetBeansProjects/StanleySpace/dist/StanleySpace.jar
 file.reference.StanleySpace.jar-1=G:\\Google Drive\\Stanley_projects\\NETBEANS\\StanleySpace\\Stan\\StanleySpace\\dist\\StanleySpace.jar
 includes=**
@@ -35,7 +37,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.BlockBibl.jar}:\
     ${file.reference.StanleySpace.jar}:\
-    ${file.reference.StanleySpace.jar-1}
+    ${file.reference.StanleySpace.jar-1}:\
+    ${file.reference.StanAPI.jar}:\
+    ${file.reference.BlockAPI.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
