Немного изменил классы для соединения дроида и сервера

--- a/BlockServer/nbproject/project.properties
+++ b/BlockServer/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=BlockServer
+application.vendor=Stanley
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,19 +27,18 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/BlockServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.BlockAPI.jar=/home/toha/NetBeansProjects/BlockAPI/BlockAPI/dist/BlockAPI.jar
-file.reference.BlockBibl.jar=/home/toha/NetBeansProjects/BlockBibl/dist/BlockBibl.jar
-file.reference.StanAPI.jar=/home/toha/NetBeansProjects/StanAPI/StanAPI/dist/StanAPI.jar
-file.reference.StanleySpace.jar=/home/toha/NetBeansProjects/StanleySpace/dist/StanleySpace.jar
+file.reference.BlockAPI.jar=G:\\Google Drive\\Stanley_projects\\NETBEANS\\StanleySpace\\BlockNote\\BlockAPI\\BlockAPI\\dist\\BlockAPI.jar
+file.reference.BlockBibl.jar=G:\\Google Drive\\Stanley_projects\\NETBEANS\\StanleySpace\\BlockNote\\BlockBibl\\dist\\BlockBibl.jar
+file.reference.StanAPI.jar=G:\\Google Drive\\Stanley_projects\\NETBEANS\\StanleySpace\\Stan\\StanAPI\\StanAPI\\dist\\StanAPI.jar
 file.reference.StanleySpace.jar-1=G:\\Google Drive\\Stanley_projects\\NETBEANS\\StanleySpace\\Stan\\StanleySpace\\dist\\StanleySpace.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.BlockBibl.jar}:\
-    ${file.reference.StanleySpace.jar}:\
     ${file.reference.StanleySpace.jar-1}:\
     ${file.reference.StanAPI.jar}:\
+    ${file.reference.BlockBibl.jar}:\
     ${file.reference.BlockAPI.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
